sumo/tests/duarouter/routes/style1_input/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Invalid arrivallane definition for vehicle '0'
Quitting (on error).
